--- a/make/Makefile
+++ b/make/Makefile
@@ -25,13 +25,13 @@ install: $(STAMPDIR)/built
 	$(call touch,$(STAMPDIR)/installed)
 
 $(STAMPDIR)/installed: $(STAMPDIR)/built
-	$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
+	$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
 	$(call touch,$(@))
 
 .PHONY: uninstall
 uninstall:
 	if [ -f "$(STAMPDIR)/installed" ]; then \
-		$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"; \
+		$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"; \
 	fi
 	$(call rmf,$(STAMPDIR)/installed)
 
@@ -84,3 +84,8 @@ $(tarball): | $(FETCHDIR)
 	$(call download,$(sig_url),$(@).sig)
 	$(call gpg_verify_detach,$(@).sig,$(@).tmp)
 	mv $(@).tmp $(@)
+
+.PHONY: mrproper
+mrproper: uninstall
+	$(call rmrf,$(BUILDDIR))
+	$(call rmrf,$(STAMPDIR))
