--- a/libtool/Makefile
+++ b/libtool/Makefile
@@ -1,13 +1,12 @@
+pkg_url     := https://ftp.gnu.org/gnu/libtool/libtool-2.4.7.tar.xz
+sig_url     := $(pkg_url).sig
+tarball     := $(FETCHDIR)/$(notdir $(pkg_url))
+fetch_dists := $(tarball)
+
 include ../autotools.mk
 
-pkg_url := https://ftp.gnu.org/gnu/libtool/libtool-2.4.7.tar.xz
-sig_url := https://ftp.gnu.org/gnu/libtool/libtool-2.4.7.tar.xz.sig
-tarball := $(FETCHDIR)/$(notdir $(pkg_url))
-
 define fetch_cmds
-$(call download,$(pkg_url),$(tarball))
-$(call download,$(sig_url),$(tarball).sig)
-$(call gpg_verify_detach,$(tarball).sig,$(tarball))
+$(call download_verify_detach,$(pkg_url),$(sig_url),$(tarball))
 endef
 
 define xtract_cmds
