--- a/make/Makefile
+++ b/make/Makefile
@@ -10,7 +10,7 @@ $(call download_verify_detach,$(pkg_url),$(sig_url),$(tarball))
 endef
 
 define xtract_cmds
-$(call untar,$(tarball),--strip-components=1)
+$(call untar,$(BUILDDIR),$(tarball),--strip-components=1)
 endef
 
 define config_cmds
@@ -22,17 +22,17 @@ cd $(BUILDDIR) && \
 endef
 
 define build_cmds
-$(MAKE) -C $(BUILDDIR) all
++$(MAKE) -C $(BUILDDIR) all
 endef
 
 define clean_cmds
-$(MAKE) -C $(BUILDDIR) clean
++$(MAKE) -C $(BUILDDIR) clean
 endef
 
 define install_cmds
-$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
 endef
 
 define uninstall_cmds
-$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"
 endef
