--- a/kconfig-frontends/Makefile
+++ b/kconfig-frontends/Makefile
@@ -9,8 +9,8 @@ $(call download,$(pkg_url),$(tarball))
 endef
 
 define xtract_cmds
-$(call untar,$(BUILDDIR),$(tarball),--strip-components=1)
-cd $(BUILDDIR) && \
+$(call untar,$(SRCDIR),$(tarball),--strip-components=1)
+cd $(SRCDIR) && \
 for p in $$(grep -v gtk debian/patches/series); do \
 	patch -p1 < debian/patches/$$p; \
 done
@@ -19,22 +19,19 @@ endef
 # QT frontend may not support building in PIE mode if platform QT was built with
 # -reduce-relocations
 define config_cmds
-cd $(BUILDDIR) && autoreconf --install --force
+cd $(SRCDIR) && autoreconf --install --force
 cd $(BUILDDIR) && \
-./configure --prefix="$(PREFIX)" \
-            --enable-frontends="kconfig,conf,gconf,mconf,nconf,qconf" \
-            --enable-silent-rules \
-            CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
-            CXXFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(subst -fpie,,$(HARDEN_CFLAGS))" \
-            LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
+$(SRCDIR)/configure \
+	--prefix="$(PREFIX)" \
+	--enable-frontends="kconfig,conf,gconf,mconf,nconf,qconf" \
+	--enable-silent-rules \
+	CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
+	CXXFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(subst -fpie,,$(HARDEN_CFLAGS))" \
+	LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
 endef
 
 define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
-endef
-
-define clean_cmds
-+$(MAKE) -C $(BUILDDIR) clean
 endef
 
 define install_cmds
