--- a/make/Makefile
+++ b/make/Makefile
@@ -10,23 +10,20 @@ $(call download_verify_detach,$(pkg_url),$(sig_url),$(tarball))
 endef
 
 define xtract_cmds
-$(call untar,$(BUILDDIR),$(tarball),--strip-components=1)
+$(call untar,$(SRCDIR),$(tarball),--strip-components=1)
 endef
 
 define config_cmds
 cd $(BUILDDIR) && \
-./configure --prefix="$(PREFIX)" \
-            --enable-silent-rules \
-            CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
-            LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
+$(SRCDIR)/configure \
+	--prefix="$(PREFIX)" \
+	--enable-silent-rules \
+	CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
+	LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
 endef
 
 define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
-endef
-
-define clean_cmds
-+$(MAKE) -C $(BUILDDIR) clean
 endef
 
 define install_cmds
