--- a/pkg-config/Makefile
+++ b/pkg-config/Makefile
@@ -10,25 +10,22 @@ $(call download_verify_detach,$(pkg_url),$(sig_url),$(tarball))
 endef
 
 define xtract_cmds
-$(call untar,$(BUILDDIR),$(tarball),--strip-components=1)
-cd $(BUILDDIR) && patch -p1 < $(CURDIR)/glib_gdate_Werror_format_nonliteral.patch
+$(call untar,$(SRCDIR),$(tarball),--strip-components=1)
+cd $(SRCDIR) && patch -p1 < $(CURDIR)/glib_gdate_Werror_format_nonliteral.patch
 endef
 
 define config_cmds
 cd $(BUILDDIR) && \
-./configure --prefix="$(PREFIX)" \
-            --enable-silent-rules \
-            --with-internal-glib \
-            CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
-            LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
+$(SRCDIR)/configure \
+	--prefix="$(PREFIX)" \
+	--enable-silent-rules \
+	--with-internal-glib \
+	CFLAGS="$(MACHINE_CFLAGS) $(OPTIM_CFLAGS) $(HARDEN_CFLAGS)" \
+	LDFLAGS="$(MACHINE_LDFLAGS) $(OPTIM_LDFLAGS) $(HARDEN_LDFLAGS)"
 endef
 
 define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
-endef
-
-define clean_cmds
-+$(MAKE) -C $(BUILDDIR) clean
 endef
 
 define install_cmds
