clean targets support

--- a/kconfig-frontends/Makefile
+++ b/kconfig-frontends/Makefile
@@ -34,6 +34,10 @@ define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
 endef
 
+define clean_cmds
++$(MAKE) -C $(BUILDDIR) clean
+endef
+
 define install_cmds
 +$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
 endef
