--- a/automake/Makefile
+++ b/automake/Makefile
@@ -26,6 +26,10 @@ define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
 endef
 
+define clean_cmds
++$(MAKE) -C $(BUILDDIR) clean
+endef
+
 define install_cmds
 +$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
 endef
