--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -119,6 +119,10 @@ define build_cmds
 +$(MAKE) -C $(BUILDDIR) all
 endef
 
+define clean_cmds
++$(MAKE) -C $(BUILDDIR) clean
+endef
+
 define install_cmds
 +$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)" tooldir="$(PREFIX)"
 endef
