initial staging logic support

--- a/cmake/Makefile
+++ b/cmake/Makefile
@@ -4,7 +4,7 @@ sig_url     := https://github.com/Kitware/CMake/releases/download/v3.23.1/cmake-
 tarball     := $(FETCHDIR)/$(notdir $(pkg_url))
 fetch_dists := $(tarball)
 
-include $(TOPDIR)/helpers.mk
+include $(TOPDIR)/rules.mk
 
 define fetch_cmds
 $(call download,$(pkg_url),$(tarball).down)
@@ -68,9 +68,9 @@ define clean_cmds
 endef
 
 define install_cmds
-+$(MAKE) -C $(BUILDDIR) install/strip DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) install DESTDIR="$(STAGEDIR)"
 endef
 
 define uninstall_cmds
-+$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(STAGEDIR)"
 endef
