--- a/ninja/Makefile
+++ b/ninja/Makefile
@@ -2,7 +2,7 @@ pkg_url     := https://github.com/ninja-build/ninja/archive/refs/tags/v1.10.2.ta
 tarball     := $(FETCHDIR)/$(notdir $(pkg_url))
 fetch_dists := $(tarball)
 
-include $(TOPDIR)/helpers.mk
+include $(TOPDIR)/rules.mk
 
 define fetch_cmds
 $(call download,$(pkg_url),$(tarball))
@@ -30,10 +30,10 @@ cd $(BUILDDIR) && ./ninja $(if $(V),--verbose) clean
 endef
 
 define install_cmds
-install --mode=755 --directory $(DESTDIR)$(PREFIX)/bin
-install --mode=755 $(BUILDDIR)/ninja $(DESTDIR)$(PREFIX)/bin/ninja
+install --mode=755 --directory $(STAGEDIR)$(PREFIX)/bin
+install --mode=755 $(BUILDDIR)/ninja $(STAGEDIR)$(PREFIX)/bin/ninja
 endef
 
 define uninstall_cmds
-+$(call rmf, $(DESTDIR)$(PREFIX)/bin/ninja)
++$(call rmf, $(STAGEDIR)$(PREFIX)/bin/ninja)
 endef
