--- a/kconfig-frontends/Makefile
+++ b/kconfig-frontends/Makefile
@@ -2,7 +2,7 @@ pkg_url     := https://salsa.debian.org/philou/kconfig-frontends/-/archive/debia
 tarball     := $(FETCHDIR)/$(notdir $(pkg_url))
 fetch_dists := $(tarball)
 
-include $(TOPDIR)/helpers.mk
+include $(TOPDIR)/rules.mk
 
 define fetch_cmds
 $(call download,$(pkg_url),$(tarball))
@@ -39,9 +39,9 @@ define clean_cmds
 endef
 
 define install_cmds
-+$(MAKE) -C $(BUILDDIR) install-strip DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) install DESTDIR="$(STAGEDIR)"
 endef
 
 define uninstall_cmds
-+$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(DESTDIR)"
++$(MAKE) -C $(BUILDDIR) uninstall DESTDIR="$(STAGEDIR)"
 endef
