--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -8,7 +8,9 @@ RUN apt-get --yes update
 RUN apt-get --yes install sudo util-linux make locales @@DEBSRCDEPS@@
 RUN apt-get --yes clean
 RUN echo 'en_US.UTF-8 UTF-8' > /etc/locale.gen && locale-gen
-RUN addgroup htchain
+# Make the htchain group a system group to prevent from GID space conflict with
+# $HTCHAIN_GID user group created by scripts/dock_start.sh
+RUN addgroup --system htchain
 RUN umask 0337 && \
     echo '%htchain ALL=(ALL:ALL) NOPASSWD: /usr/bin/apt, /usr/bin/apt-get' \
     > /etc/sudoers.d/htchain
